Fixed some text error

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <hr>
   <h3>Educations</h3>
   <ul>
-    <li>Completed PSC from <a href="https://www.facebook.com/jameaquasemia">jamea Quasemia</a>in 2016</li>
-    <li>Completed JSC from <a href="https://www.facebook.com/jameaquasemia">jamea Quasemia</a>in 2019</li>
+    <li>Completed PSC from <a href="https://www.facebook.com/jameaquasemia">Jamea Quasemia</a>in 2016</li>
+    <li>Completed JSC from <a href="https://www.facebook.com/jameaquasemia">Jamea Quasemia</a>in 2019</li>
     <li> SSC 2022 candided</li>
   </ul>
   <hr>
@@ -34,14 +34,14 @@
     <li>Playing games</li>
     <li>Riding bike</li>
     <li>Listening music</li>
-    <li>watching Anime</li>
+    <li>Watching Anime</li>
   </ol>
   <hr>
   <h3>Work experience</h3>
   <table cellspacing="10">
     <thead>
-      <th>year</th>
-      <th>work</th>
+      <th>Year</th>
+      <th>Work</th>
     </thead>
     <tbody>
       <tr>
