added personal site v2

--- a/Contact.html
+++ b/Contact.html
@@ -4,33 +4,35 @@
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <h1>Contact me</h1>
-  <p><strong>Email:</strong>Sadmansakib01644307071@gmail.com</p>
-  <p><strong>Phone number:</strong>01644307071</p>
+  <p class="pborder1"><strong>Email:</strong>Sadmansakib01644307071@gmail.com</p>
+  <p class="pborder1"><strong>Email 2:</strong>Sadmansakib01980303893@gmail.com</p>
+  <p class="pborder1"><strong>Phone number:</strong>01644307071</p>
+  <p class="pborder1"><strong>Address:</strong> Narsingdi, Dhaka, bangladesh</p>
   <hr>
   <form method="post" enctype="text/plain" action="mailto:Sadmansakib01644307071@gmail.com">
-    <label for="">Your name</label>
+    <label for="">Your name:</label>
     <input type="text" name="name" value="">
     <br>
-    <label for="">Your email</label>
+    <label for="">Your email:</label>
     <input type="email" name="email" value="">
     <br>
-    <label for="">Your message</label><br>
+    <label for="">Your message:</label><br>
     <textarea name="message" rows="6" cols="60"></textarea><br>
-    <input type="submit" name="">
+    <input type="submit" name="" class="submit submit1">
   </form>
   <br><br>
 
 
 
-  <button type="button" name="Home page">
-    <a href="index.html">Home page</a>
+  <button type="button" name="Home page" class="button submit1">
+    <a href="index.html" class="a1">Home page</a>
   </button>
+
 </body>
-
-
 
 </html>
