--- a/index.html
+++ b/index.html
@@ -4,81 +4,134 @@
 <head>
   <meta charset="utf-8">
   <title>Sadman's personal site</title>
+  <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td>
-        <img
-          src="image/278915821_152563150584072_3811300410123709573_n.jpg"
-          alt="Sadman's facebook profile picture" height="250" width="250">
+        <img src="image/1659148208022.jpeg" alt="Sadman's facebook profile picture" height="260" width="210" class=" img ">
       </td>
       <td>
-        <h1>Sadman Sakib</h1>
-        <p><em>I'm a student and <strong>beginner programmer</strong></em></p>
-        <p>I like playing games watching anime and movies and I like riding bikes and traveling but I'm an introvert person </p>
+        <h1>Sadman Sakib.</h1>
+        <p><em>I'm a <strong>student</strong> and beginner programmer.</em></p>
+        <p>
+          I am presently 17 years old and I live in <a href="https://en.wikipedia.org/wiki/Narsingdi_District">Narsingdi</a>.
+          I'm currently studying at <a href="http://www.jameaquasemia.edu.bd/">Jamea Quasemia</a>.
+          I like testing different foods and playing games. I love spending time alone doing nothing:).
+          I want to become a software engineer or web developer one day.
+          I'm currently doing a Web Development Course On "<a href="https://appbrewery.com/?_ga=2.197898151.984589314.1658945126-1844827705.1658789110">The app Brewery</a>" and also,
+          I tried learning c++ once but at that time I wasn't able to find any good courses to learn and
+          I hadn't any idea where to start from which computer languages I should learn so I stopped. And after some research,
+          I found that HTML and CSS are easy compared to Python and C++ so that is why I started with HTML and then
+          I found a complete web development course which includes HTML, CSS, JavaScript and so on and started doing it.
+        </p>
       </td>
     </tr>
   </table>
   <hr>
   <h3>Educations</h3>
-  <ul>
-    <li>Completed PSC from <a href="https://www.facebook.com/jameaquasemia">Jamea Quasemia</a> in 2016</li>
-    <li>Completed JSC from <a href="https://www.facebook.com/jameaquasemia">Jamea Quasemia</a> in 2019</li>
-    <li> SSC 2022 candided</li>
-  </ul>
+  <table cellspacing="15px">
+    <thead>
+      <tr>
+        <th>Date</th>
+        <th>Degree</th>
+        <th>Board</th>
+        <th>Grade</th>
+        <th>Educational institute</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>2016</td>
+        <td>PSC</td>
+        <td>Dhaka</td>
+        <td>A+</td>
+        <td><a href="http://www.jameaquasemia.edu.bd/">Jamea Quasemia</a></td>
+      </tr>
+      <tr>
+        <td>2019</td>
+        <td>JSC</td>
+        <td>Dhaka</td>
+        <td>A</td>
+        <td><a href="http://www.jameaquasemia.edu.bd/">Jamea Quasemia</a></td>
+      </tr>
+    </tbody>
+  </table>
   <hr>
   <h3>Hobbies</h3>
   <ol>
-    <li>Playing games</li>
-    <li>Riding bike</li>
-    <li>Listening music</li>
-    <li>Watching Anime</li>
+    <li>Photography</li>
+    <li>Cycling</li>
+    <li>Video games</li>
+    <li>watching Anime</li>
+    <li>Listening to music</li>
+    <li>Relaxing</li>
+    <li>Sleeping</li>
   </ol>
   <hr>
   <h3>Work experience</h3>
   <table cellspacing="10">
     <thead>
-      <th>Year</th>
-      <th>Work</th>
+      <th>year</th>
+      <th>work</th>
     </thead>
     <tbody>
       <tr>
         <td>2018</td>
-        <td>Moderator of BDZone community</td>
+        <td>Moderator of BDZone Community</td>
       </tr>
       <tr>
         <td>2021</td>
-        <td>Moderator and editor of Ghosttown bangladesh</td>
+        <td>Server Manager of BD Tyros Community</td>
       </tr>
     </tbody>
   </table>
   <hr>
   <h3>Skills</h3>
-  <table cellspacing="10">
+  <table cellspacing="10px">
     <tr>
       <td>
-        <table>
+        <table cellspacing="17px">
           <tr>
-            <td>Cyceling</td>
-            <td>★★★★★</td>
+            <th>Computer skill</th>
           </tr>
           <tr>
-            <td>Swimming</td>
-            <td>★</td>
+            <td>HTML</td>
+            <td>☆☆☆☆☆</td>
+          </tr>
+          <tr>
+            <td>CSS</td>
+            <td>☆☆☆</td>
+          </tr>
+          <tr>
+            <td>Adobe Premiere Pro</td>
+            <td>☆☆☆</td>
           </tr>
         </table>
       </td>
       <td>
-        <table>
+        <table cellspacing="10px">
           <tr>
-            <td>Singing</td>
-            <td>★</td>
+            <th>Language skill</th>
           </tr>
           <tr>
-            <td>Video editing</td>
-            <td>★★★</td>
+            <td>Bangla</td>
+            <td>☆☆☆☆☆</td>
+          </tr>
+          <tr>
+            <td>English</td>
+            <td>☆☆☆☆</td>
+          </tr>
+          <tr>
+            <td>Hindi</td>
+            <td>☆☆☆</td>
+          </tr>
+          <tr>
+            <td>Arabic</td>
+            <td>☆</td>
           </tr>
         </table>
       </td>
@@ -86,7 +139,7 @@
   </table>
 
   <br>
-  <a href="Contact.html">Contact me</a>
+  <button type="button" name="button" class="button submit1"><a href="Contact.html" class="a1">Contact me</a></button>
 
 </body>
 
